QmlModels: Make model object properties non-FINAL again

You can override them from your model after all. The anonymous
properties can be final, though. They're impossible to override.

Amends commit 2af5cc0a7f62680f41e83f32d2ecac502db5c1e7.

Pick-to: 6.6
Fixes: QTBUG-120499
Change-Id: Ib251f8a1845366074faec2db4914855c04b4db34
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Vladimir Belyavsky <belyavskyv@gmail.com>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 72c8d39da2afd5c2a9c94869aa79a62bca89c803)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>