src/qmlmodels/qqmldmlistaccessordata_p.h
@@ -26,8 +26,8 @@ class VDMListDelegateDataType;
 class QQmlDMListAccessorData : public QQmlDelegateModelItem
 {
     Q_OBJECT
-    Q_PROPERTY(QVariant modelData READ modelData WRITE setModelData NOTIFY modelDataChanged FINAL)
-    QT_ANONYMOUS_PROPERTY(QVariant READ modelData WRITE setModelData NOTIFY modelDataChanged)
+    Q_PROPERTY(QVariant modelData READ modelData WRITE setModelData NOTIFY modelDataChanged)
+    QT_ANONYMOUS_PROPERTY(QVariant READ modelData WRITE setModelData NOTIFY modelDataChanged FINAL)
 public:
     QQmlDMListAccessorData(
             const QQmlRefPointer<QQmlDelegateModelItemMetaType> &metaType,
