tests/auto/qml/qqmldelegatemodel/tst_qqmldelegatemodel.cpp
@@ -35,6 +35,7 @@ private slots:
     void universalModelData();
     void typedModelData();
     void requiredModelData();
+    void overriddenModelData();
     void deleteRace();
     void persistedItemsStayInCache();
     void unknownContainersAsModel();
@@ -471,6 +472,34 @@ void tst_QQmlDelegateModel::requiredModelData()
         const QVariant a = delegate->property("a");
         QCOMPARE(a.metaType(), QMetaType::fromType<QString>());
         QCOMPARE(a.toString(), QLatin1String("a"));
+    }
+}
+
+void tst_QQmlDelegateModel::overriddenModelData()
+{
+    QTest::failOnWarning(QRegularExpression(
+            "Final member [^ ]+ is overridden in class [^\\.]+. The override won't be used."));
+
+    QQmlEngine engine;
+    QQmlComponent c(&engine, testFileUrl("overriddenModelData.qml"));
+    QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+    QScopedPointer<QObject> o(c.create());
+
+    QQmlDelegateModel *delegateModel = qobject_cast<QQmlDelegateModel *>(o.data());
+    QVERIFY(delegateModel);
+
+    for (int i = 0; i < 3; ++i) {
+        delegateModel->setProperty("n", i);
+        QObject *delegate = delegateModel->object(0);
+        QVERIFY(delegate);
+
+        if (i == 2) {
+            // Someone is certainly relying on this.
+            // We need to find a migration mechanism to fix it.
+            QEXPECT_FAIL("", "You can actually not override if the model is a QObject", Continue);
+        }
+
+        QCOMPARE(delegate->objectName(), QLatin1String("a b c d e f"));
     }
 }
 
